--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.0",
+		"@types/pg": "^8.11.10",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.7",
 		"supertest": "^7.0.0",
