--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,11 @@
 {
 	"name": "backend",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "dist/server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node dist/server.js",
+		"dev": "nodemon src/server.ts",
+		"build": "tsc"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,8 +23,10 @@
 		"pg": "^8.13.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.10.0",
 		"@types/pg": "^8.11.10",
 		"jest": "^29.7.0",
