--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,20 +1,32 @@
-# Dockerfile
-FROM node:16-alpine
+# Backend/Dockerfile
+# Este Dockerfile se basa en Node.js versión 18 con Alpine Linux para una imagen ligera
+FROM node:18-alpine
 
-# Establecer el directorio de trabajo
-WORKDIR /app
+# Instalamos dependencias del sistema necesarias para la compilación
+RUN apk add --no-cache python3 make g++
 
-# Copiar los archivos de configuración de dependencias
+# Establecemos el directorio de trabajo en el contenedor
+WORKDIR /usr/src/app
+
+# Copiamos los archivos de configuración de dependencias
+# Los copiamos primero para aprovechar el caché de capas de Docker
 COPY package*.json ./
+COPY tsconfig.json ./
 
-# Instalar dependencias
+# Instalamos las dependencias del proyecto
 RUN npm install
 
-# Copiar el código fuente
+# Instalamos las dependencias de TypeScript necesarias
+RUN npm install --save-dev @types/express @types/node @types/cors @types/helmet
+RUN npm install express pg bcrypt jsonwebtoken dotenv joi cors body-parser class-validator
+
+# Copiamos el código fuente
 COPY . .
 
-# Exponer el puerto usado por la aplicación
+# Exponemos el puerto que usará la aplicación
 EXPOSE 3000
 
-# Comando para iniciar la aplicación
-CMD ["npm", "run", "start"]
+# Comando para iniciar la aplicación en modo desarrollo
+CMD ["npm", "run", "dev"]
+
+
