--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"start": "node dist/server.js",
 		"dev": "nodemon src/server.ts",
-		"build": "tsc"
+		"build": "tsc",
+		"clean": "rm -rf dist"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,10 +25,13 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/express-rate-limit": "^6.0.2",
+		"@types/helmet": "^4.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.7",
-		"@types/node": "^22.10.0",
+		"@types/node": "^22.10.1",
 		"@types/pg": "^8.11.10",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.7",
