--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+  "@types/express": "4.17.21"
   }
+
 }
