--- a/backend/package.json
+++ b/backend/package.json
@@ -1,52 +1,67 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"main": "dist/server.js",
-	"scripts": {
-		"start": "node dist/server.js",
-		"dev": "nodemon src/server.ts",
-		"build": "tsc && npm run copy-types",
-		"copy-types": "cp -r src/types dist/",
-		"clean": "rm -rf dist"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
-	"dependencies": {
-		"bcrypt": "^5.1.1",
-		"body-parser": "^1.20.3",
-		"class-validator": "^0.14.1",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.5",
-		"express": "^4.21.1",
-		"joi": "^17.13.3",
-		"jsonwebtoken": "^9.0.2",
-		"pg": "^8.13.1"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.2",
-		"@types/cors": "^2.8.17",
-		"@types/express": "4.17.21",
-		"@types/express-rate-limit": "^6.0.2",
-		"@types/helmet": "^4.0.0",
-		"@types/jest": "^29.5.14",
-		"@types/jsonwebtoken": "^9.0.7",
-		"@types/node": "^22.10.1",
-		"@types/pg": "^8.11.10",
-		"jest": "^29.7.0",
-		"nodemon": "^3.1.7",
-		"supertest": "^7.0.0",
-		"ts-jest": "^29.2.5",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.7.2"
-	},
-	"Resources": {
-		"Stage": {
-			"Type": "AWS::ApiGateway::Stage",
-			"Properties": {
-				"RestApiId": "<String>"
-			}
-		}
-	}
+  "name": "healthcare-platform",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "faker-js": "^1.0.0",
+    "helmet": "^8.0.0",
+    "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
+    "pg": "^8.13.1",
+    "redis": "^4.7.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/faker": "^6.6.11",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
+    "compression": "^1.7.5",
+    "faker": "^5.5.3",
+    "jest": "^29.7.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "_moduleAliases": {
+    "@": "dist",
+    "@config": "dist/config",
+    "@controllers": "dist/controllers",
+    "@middleware": "dist/middleware",
+    "@models": "dist/models",
+    "@routes": "dist/routes",
+    "@services": "dist/services",
+    "@utils": "dist/utils",
+    "@types": "dist/types"
+  }
 }
