--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,40 +1,33 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "lib": ["ES2020", "esnext.asynciterable"],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
-    "types": [
-      "node",
-      "express"
-    ],
-    "allowJs": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"],
-      "@types/*": ["types/*"]
-    }
+      "target": "es2018",
+      "module": "commonjs",
+      "lib": ["es2018", "esnext.asynciterable"],
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "baseUrl": ".",
+      "paths": {
+          "@/*": ["src/*"],
+          "@config/*": ["src/config/*"],
+          "@controllers/*": ["src/controllers/*"],
+          "@middleware/*": ["src/middleware/*"],
+          "@models/*": ["src/models/*"],
+          "@routes/*": ["src/routes/*"],
+          "@services/*": ["src/services/*"],
+          "@utils/*": ["src/utils/*"],
+          "@types/*": ["src/types/*"]
+      },
+      "typeRoots": ["./node_modules/@types", "./src/types"],
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
+      "sourceMap": true
   },
-  "include": [
-    "src/**/*",
-    "src/types/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
