--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^9.1.0"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
